--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -18,10 +18,20 @@ img{
 
 .info{
     background-color: #fae7fd;
-    height: 100%;
+    height: 100vh;
     width: 50%;
 }
 
+
+.title{
+    text-align: center;
+    padding: 100px;
+    font-size: 80px
+}
+
+.login{
+    padding: 50px;
+}
 
 .title{
     text-align: center;
@@ -35,7 +45,7 @@ input{
     margin-top: 30px;
 }
 
-.formContainer, .login{
+.formContainer{
     padding: 50px;
 }
 
