--- a/src/app/auth/sign-up/sign-up.component.css
+++ b/src/app/auth/sign-up/sign-up.component.css
@@ -29,13 +29,23 @@ img{
     font-size: 80px
 }
 
+.login{
+    padding: 50px;
+}
+
+.title{
+    text-align: center;
+    padding: 100px;
+    font-size: 80px
+}
+
 input{
     width: 100%;
     height: 60px;
     margin-top: 30px;
 }
 
-.formContainer, .login{
+.formContainer{
     padding: 50px;
 }
 
@@ -43,4 +53,8 @@ input{
     padding: 20px;
     float: right;
     margin-top: 20px;
+}
+
+.submit:active{
+    background-color: blue;
 }
